tests/miniJava/neg/006199_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { void java = 0 ; } }
